# TWMetro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/TWMetro/: __init__.py  client.py
src/TWMetro/api/: __init__.py  transport.py
src/TWMetro/models/: __init__.py  coordinates.py  metroline.py  metrostation.py  metrowarning.py  trainstatus.py
src/TWMetro/parsing/: __init__.py  metrolines.py  metrostations.py  metrowarnings.py  trainstatuses.py
tests/parse/: test_metrolines.py  test_metrostation.py  test_metrowarning.py  test_trainstatus.py
tests/parse/ExamplePayloads/: alerts.kml  metrolines.kml  metrostations.kml  trainstatuses.kml  warning.kml
