[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "TWMetro"
version = "0.0.1"
authors = [
    { name="Lewis Foster", email="lewis@lewisfoster.foo"},
]
description = "A simple package for reading data from the Tyne and Wear Metro API"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.5",
]